local/agent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: agent
  name: agent
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: agent
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: agent
    spec:
      containers:
        - command:
            - /bin/agent
            - -config.file=/etc/agent-config/agent.yaml
            - -metrics.wal-directory=/tmp/agent/wal
            - -enable-features=integrations-next
            - -config.expand-env
            - -config.enable-read-api
          image: grafana/agent:latest
          name: agent
          ports:
            - containerPort: 12345
          resources:
            limits:
              cpu: '200m'
              memory: '200Mi'
            requests:
              cpu: '100m'
              memory: '100Mi'
          volumeMounts:
            - mountPath: /tmp/hello-observability.log
              name: hello-observability-log-config-volume
              subPath: hello-observability.log
            - mountPath: /tmp/access.log
              name: access-log-config-volume
              subPath: access.log
            - mountPath: /etc/agent-config/agent.yaml
              name: agent-yaml-config-volume
              subPath: agent.yaml
      restartPolicy: Always
      volumes:
        - name: hello-observability-log-config-volume
          configMap:
            name: hello-observability-log
        - name: access-log-config-volume
          configMap:
            name: access-log
        - name: agent-yaml-config-volume
          configMap:
            name: agent-yaml
status: {}
