local/hello-observability-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: hello-observability
  name: hello-observability
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: hello-observability
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: hello-observability
    spec:
      containers:
        - env:
            - name: JAVA_TOOL_OPTIONS
              value: -javaagent:./opentelemetry-javaagent.jar
            - name: OTEL_EXPORTER_OTLP_TRACES_ENDPOINT
              value: http://tempo:4317
            - name: OTEL_SERVICE_NAME
              value: hello-observability
            - name: OTEL_TRACES_EXPORTER
              value: otlp
          image: giuliohome/hello-observability:build20220429.5
          name: hello-observability
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: '200m'
              memory: '200Mi'
            requests:
              cpu: '100m'
              memory: '100Mi'
          volumeMounts:
            - mountPath: /tmp/log
              name: hello-observability-log-config-volume
              subPath: hello-observability.log
      restartPolicy: Always
      volumes:
        - name: hello-observability-log-config-volume
          csi:
            driver: file.csi.azure.com
            volumeAttributes:
              secretName: azure-secret  # required
              shareName: aksshare  # required
              mountOptions: "dir_mode=0777,file_mode=0777,cache=strict,actimeo=30"  # optional
status: {}
