local/load-generator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: load-generator
  name: load-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: load-generator
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: load-generator
    spec:
      containers:
        - args:
            - /bin/sh
            - -c
            - /tmp/load-generator.sh
          image: curlimages/curl:latest
          name: load-generator
          resources: {}
          volumeMounts:
            - mountPath: /tmp/load-generator.sh
              name: load-generator-claim0
      restartPolicy: Always
      volumes:
        - name: load-generator-claim0
          persistentVolumeClaim:
            claimName: load-generator-claim0
status: {}
