local/tempo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: tempo
  name: tempo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tempo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: tempo
    spec:
      containers:
        - args:
            - -config.file=/etc/tempo.yaml
          image: grafana/tempo:latest
          name: tempo
          ports:
            - containerPort: 14268
            - containerPort: 3200
            - containerPort: 4317
            - containerPort: 4318
            - containerPort: 9411
          resources: {}
          volumeMounts:
            - mountPath: /etc/tempo.yaml
              name: tempo-local-yaml-config-volume
              subPath: tempo.yaml
            - mountPath: /tmp/tempo
              name: tempo-claim1
      restartPolicy: Always
      volumes:
        - name: tempo-local-yaml-config-volume
          configMap:
            name: tempo-local-yaml
        - name: tempo-claim1
          persistentVolumeClaim:
            claimName: tempo-claim1
status: {}
