local/agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: agent
  name: agent
spec:
  ports:
    - name: "12345"
      port: 12345
      targetPort: 12345
  selector:
    io.kompose.service: agent
status:
  loadBalancer: {}
