local/grafana-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana
  namespace: default
  uid: 9cf6ee2d-2d0b-4e61-add2-ee4bef1edadf
  resourceVersion: '709159'
  generation: 4
  creationTimestamp: '2022-04-29T09:50:48Z'
  labels:
    app: grafana
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: networking.k8s.io/v1
      time: '2022-04-29T09:50:48Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:labels:
            .: {}
            f:app: {}
        f:spec:
          f:ingressClassName: {}
          f:rules: {}
    - manager: Go-http-client
      operation: Update
      apiVersion: networking.k8s.io/v1
      time: '2022-04-29T09:52:40Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      subresource: status
spec:
  ingressClassName: nginx
  rules:
    - host: observability.centralus.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 9000
    - host: observability.grafana.giuliohome.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 9000
status:
  loadBalancer:
    ingress:
      - ip: 52.230.224.14
